Simplified post template, and aligned namings to the change.

--- a/gisted/templates/show.html
+++ b/gisted/templates/show.html
@@ -3,7 +3,7 @@
 <body>
 
 <div class="nav">
-  <div><a href="{{ post.original_url }}">{{ post.original_hostname }}</a></div>
+  <div><a href="{{ post.original_url }}">{{ post.source_hostname }}</a></div>
   <div><a href="https://gist.github.com/{{ post.gist_id }}">gist</a></div>
 </div>
 <div class="content">
