--- a/gisted/templates/index.html
+++ b/gisted/templates/index.html
@@ -8,7 +8,7 @@
 </div>
 <div class="content">
 <h1>Gisted</h1>
-{% if (auth.authenticated) %}
+{% if (auth.allows_pasting) %}
 Authenticated
 <form action="/" method="POST">
    <input type="hidden" name="canary" value="{{ auth.canary }}" />
