Decorated show.html

--- a/gisted/templates/index.html
+++ b/gisted/templates/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<meta name="viewport" content="width=800" />
+<meta name="description" content="Gisted is a tool to make transcripts like as if it is for reading.">
 <title>Gisted: Ideas worth pasting</title>
 <link href='http://fonts.googleapis.com/css?family=Titillium+Web:700|Raleway:200' rel='stylesheet' type='text/css'>
 <style>
