Added README and social thing.

--- a/gisted/templates/index.html
+++ b/gisted/templates/index.html
@@ -162,6 +162,10 @@ ul.flash li.error {
   color: #800;
 }
 
+div.socials {
+  text-align: center;
+}
+
 </style>
 </head>
 <body>
@@ -208,7 +212,10 @@ ul.flash li.error {
    If you just don't like this and want to leave, here to <a href="{{ url_for('logout') }}">sign out</a>.
 {% endif %}
 </p>
-
+<hr />
+<div class="socials">
+  <iframe class="star" src="http://ghbtns.com/github-btn.html?user=omo&amp;repo=gisted&amp;type=watch&amp" allowtransparency="true" frameborder="0" scrolling="0" width="62px" height="20px"></iframe>
+</div>
 </div>
 
 </body>
