--- a/gisted/templates/show.html
+++ b/gisted/templates/show.html
@@ -55,6 +55,10 @@ div.note a:hover {
 div.title-note { margin-bottom: 2em; }
 div.end-note { margin-top: 2em; }
 
+em {
+    font-style: normal;
+    font-weight: bold;
+}
 
 hr.end {
    width: 40%;
@@ -74,7 +78,7 @@ hr.end {
 <div class="note title-note"><a href="{{ post.source_url }}">{{ post.source_url }}</a></div>
 
 {% for p in post.paragraphs %}
-<p>{{ p }}</p>
+<p>{{ p | markdown }}</p>
 {% endfor %}
 
 <div class="note end-note">
