Added a GA snippet.

--- a/gisted/templates/index.html
+++ b/gisted/templates/index.html
@@ -168,6 +168,19 @@ div.socials {
 }
 
 </style>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-27326331-3']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 <body>
 <div class="container">
@@ -218,6 +231,5 @@ div.socials {
   <iframe class="star" src="http://ghbtns.com/github-btn.html?user=omo&amp;repo=gisted&amp;type=watch&amp" allowtransparency="true" frameborder="0" scrolling="0" width="62px" height="20px"></iframe>
 </div>
 </div>
-
 </body>
 </html>
