Fixed wording, added "reload" make target.

--- a/gisted/templates/index.html
+++ b/gisted/templates/index.html
@@ -211,7 +211,7 @@ div.socials {
 </form>
 <p>
 {% if not auth.authenticated %}
-  <a class="login" href="{{ url_for('login') }}">Sign in using Github</a> first, then give
+  <a class="login" href="{{ url_for('login') }}">Sign in using GitHub</a> first, then give
 {% else %}
   Give
 {% endif %}
