--- a/gisted/templates/index.html
+++ b/gisted/templates/index.html
@@ -205,7 +205,9 @@ div.socials {
 <form action="/" method="POST" class="submit">
    <input type="hidden" name="canary" value="{{ auth.canary }}" />
    <div class="submitbox {% if not auth.allows_pasting %}submitbox-disabled{% endif %}">
-     <input spellcheck="falsem" type="text" name="u" value="" placeholder="http://..." {% if not auth.allows_pasting %}disabled{% else %}autofocus{% endif %}/>
+     <input spellcheck="falsem" type="text" name="u" 
+            value="{{ u }}" placeholder="http://..." 
+            {% if not auth.allows_pasting %}disabled{% else %}autofocus{% endif %}/>
      <input type="submit" name="submit" value="+" {% if not auth.allows_pasting %}disabled{% endif %}/>
    </div>
 </form>
@@ -221,6 +223,7 @@ div.socials {
 <hr />
 <p>
    For now, Gisted supports <a href="http://www.ted.com/">TED</a> talks and <a href="http://www.infoq.com/">InfoQ</a> interviews. 
+   It provides a "<a href="javascript:window.location = 'http://gisted.in/?u=' + encodeURIComponent(window.location);">+g</a>" bookmarklet.
    Please <a href="https://github.com/omo/gisted/issues">file a bug</a> for blaming or requesting things - <a href="https://github.com/omo">I</a> would highly appreciate it.
 {% if auth.authenticated %}
    If you just don't like this and want to leave, here to <a href="{{ url_for('logout') }}">sign out</a>.
