Added InfoQ presentation support.

--- a/gisted/templates/show.html
+++ b/gisted/templates/show.html
@@ -35,6 +35,14 @@ body {
    line-height: 30px;
 }
 
+.content p img.paragraph-image {
+   max-width: 100%;
+   text-align: center;
+   border-style: solid;
+   border-width: 2px;
+   border-color: #eee;
+}
+
 div.note {
    font-family: "Open Sans", sans-serif;
    font-size: 14px;
