Revised wordings and added a test.

--- a/gisted/templates/index.html
+++ b/gisted/templates/index.html
@@ -224,7 +224,7 @@ div.socials {
 </p>
 <hr />
 <p>
-   For now, Gisted supports <a href="http://www.ted.com/">TED</a> talks and <a href="http://www.infoq.com/">InfoQ</a> interviews. 
+   For now, Gisted supports talks from <a href="http://www.ted.com/">TED</a> and <a href="http://www.infoq.com/">InfoQ</a>. 
    It provides a "<a href="javascript:window.location = 'http://gisted.in/?u=' + encodeURIComponent(window.location);">+g</a>" bookmarklet.
    Please <a href="https://github.com/omo/gisted/issues">file a bug</a> for blaming or requesting things - <a href="https://github.com/omo">I</a> would highly appreciate it.
 {% if auth.authenticated %}
