--- a/gisted/templates/show.html
+++ b/gisted/templates/show.html
@@ -43,6 +43,12 @@ body {
    border-color: #eee;
 }
 
+.content p embed.paragraph-image {
+   max-width: 100%;
+   width: 800px;
+   height: 480px;
+}
+
 div.note {
    font-family: "Open Sans", sans-serif;
    font-size: 14px;
